- Ostruppen weapon rework:
 * Far accuracy 0.17 -> 0.12
 * Mid accuracy 0.26 -> 0.24
 * Near accuracy 0.62 -> 0.55
 * Damage 15 -> 25
 * All ranges reduced by 15%
- Ostruppen cover bonus rework:
 * Base accuracy increase reduced 2.35 -> 1.15 (this makes base squad performance with picked up weapon on par with other ostheer squads)
 * Now grants 20% increased sight range
 * Reduces received accuracy by 25%
 * Increases weapon range by 20%
- Ostruppen reserves rework:
 * No longer can come in with an LMG42
 * No longer have a chance to come in with veterancy level 3
 * The chance of getting base veterancy is slightly increased

OKW:
- Panzerfusilier population cost increased 1.5 -> 1.75
- King Tiger frontal armor reduced 425 -> 375


=================================================================
## v0.37
=================================================================

-----------------------------------------------------------------
## Attributes:

Soviet:
- Conscript ppsh rework:
 * Damage increased 8 -> 9
 * Long range accuracy increased 0.03 -> 0.06
 * Mid range accuracy increased 0.15 -> 0.21
- Shock troop ppsh mid range accuracy increased 0.22 -> 0.24

USF:
- Paratrooper LMG short range accuracy reduced 0.6 -> 0.45
- Paratrooper LMG mid range accuracy reduced 0.21 -> 0.22
- Paratrooper thompson long range accuracy increased 0.03 -> 0.06
- Paratrooper thompson mid range accuracy increased 0.08 -> 0.15
- Combat Engineer grease gun mid range accuracy increased 0.08 -> 0.14
- Captain thompson mid range accuracy increased 0.1 -> 0.15
- Captain thompson far range accuracy increased 0.03 -> 0.06

Ostheer:
- Pioneer short range accuracy decreased 0.4 -> 0.38
- Assault Grenadier mid range accuracy increased 0.1 -> 0.15
- Panzer Grenadier mid range accuracy increased 0.23 -> 0.25
- Weapon Crew accuracies normalized

OKW:
- Sturmpioneer mid range accuracy increased 0.14 -> 0.17
- Volksgrenadier mid range accuracy increased 0.28 -> 0.3
